--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Azuresetupsessions by vperez-rwserver</title>
+    <title>Azure Setup Sessions by vperez-rwserver</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Azuresetupsessions</h1>
+        <h1>Azure Setup Sessions</h1>
         <p>Documentation for Azure Hands-On Training Complimentary Microsoft Virtual 1:1 Set-up Sessions </p>
 
         <p class="view"><a href="https://github.com/vperez-rwserver/AzureSetupSessions">View the Project on GitHub <small>vperez-rwserver/AzureSetupSessions</small></a></p>
